src/objects/SOVER__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SOVER</relationshipLabel>
        <relationshipName>SOVER</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SOVER</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOVER_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Goodwill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glasses (other supplier)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value_Goodwill__c</fullName>
        <label>Value (Goodwill)</label>
        <picklist>
            <picklistValues>
                <fullName>3%</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SOVER</label>
    <nameField>
        <displayFormat>SV-{0000}</displayFormat>
        <label>SOVER Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOVER</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>